Fix align of building resources

--- a/src/IncrementalSociety.Web/wwwroot/css/site.sass
+++ b/src/IncrementalSociety.Web/wwwroot/css/site.sass
@@ -29,6 +29,7 @@
 	padding-right: 5px
 	margin-bottom: 5px
 	min-height: 35px
+	max-width: 200px
 
 .area-building-title
 	margin-bottom: 5px
@@ -67,10 +68,8 @@
 	display: none
 
 .building-resource
-	display: inline
 	font-size: .75rem
-	margin-left: 2px
-	margin-right: 2px
+	margin-right: 8px
 	.resource-image
 		height: 15px
-		margin-right: 0px
+		margin-right: 2px
